# origami-devops-platform

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
artifacts/: .gitkeep
artifacts/audit/: .gitkeep
artifacts/benchmarks/: .gitkeep
artifacts/models/: .gitkeep
artifacts/reports/: .gitkeep
configs/benchmarks/: latency_cpu.yaml
configs/observability/: prometheus.yml
configs/pipelines/: mini_pic2_gridworld.yaml
configs/scenarios/: camera_depth_drift.yaml  corridor_conflict.yaml  corridor_priority_claim.yaml  dock_queue_on_low_battery.yaml  door_crossing_with_hold_confirmed.yaml  door_crossing_without_hold.yaml  elevator_queue.yaml  emergency_stop_active.yaml  floor_friction_low_mu.yaml  handoff_without_auth.yaml  human_too_close.yaml  low_battery_return.yaml  medium_uncertainty_caution.yaml  normal_delivery.yaml  payload_overweight.yaml  payload_unlocked.yaml  privacy_zone.yaml  sensor_blackout.yaml  stale_sensor_replan.yaml  unsafe_route_marked.yaml
docs/: architecture.md  pic2_basic_modules.md  scenario_suite.md
src/origami/: __init__.py
src/origami/api/: __init__.py  app.py
src/origami/audit/: __init__.py  chain.py
src/origami_devops_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/smoke/: test_pipeline_smoke.py
tests/unit/: test_amdc_drift_plot.py  test_artifact_store.py  test_audit_chain.py  test_benchmark_runner.py  test_dashboard_api.py  test_pic2_modules.py  test_run_history.py  test_scenario_builder.py  test_scenario_configs.py  test_scenario_runner.py
(+38 files in other folders)
