# 中文：Python 项目元数据与依赖配置，定义运行依赖、开发依赖和测试配置。
# English: Python project metadata and dependency configuration for runtime, development, and tests.

[project]
name = "origami-devops-platform"
version = "0.1.0"
description = "Local-first mini PIC 2.0 DevOps platform scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "gymnasium>=1.0",
  "matplotlib>=3.9",
  "networkx>=3.3",
  "numpy>=2.0",
  "onnxruntime>=1.19",
  "prometheus-client>=0.21",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "torch>=2.4",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]
rl = [
  "stable-baselines3>=2.3",
  "pettingzoo>=1.24",
  "mapie>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
